shared-header-footer-sass/_menu.scss
// Main Site Header
// ----------------

// REQIURES...

// From _colours.scss
// $great-blue
// $light-grey
// $mid-blue
// $mid-grey
// $stone
// $white

// From _vars.scss
// $design-max-width
// $spacing-3
// $spacing-4

// From _typography.scss
// @mixin body-s
// @mixin body-m

// From _mixins.scss
// @mixin down-chevron-1
// @mixin great-red-trim


#menu {
  background-color: $great-blue;
  float: right;
  margin-top: -58px;

  a {
    @include body-s;
    font-weight: 600;
    background-color: inherit;
    color: $white;
    display: block;
    padding: $spacing-4 $spacing-4 21px $spacing-4;
    position: relative;
    text-decoration: none;

    &:hover {
      background-color: $mid-blue;

      &:before {
        @include great-red-trim;
      }
    }
  }

  li {
    display: inline-block;
    position: static;
  }

  .description {
    @include body-s-mob; // Hmm... pity we don't have 13px desktop font.
    display: inline-block;
    padding-top: 5px;
  }

  .level-2 {
    background-color: $mid-blue;
    margin: 0 auto;
    max-width: $design-max-width;
    width: 100%;

    a {
      @include body-m;
      background-color: transparent;
      line-height: 1.26em;
      padding: 0;
      height: 45px;

      &:before {
        display: none;
      }
    }

    li {
      background-color: $mid-blue;
      display: inline-block;
      min-height: 170px;
      padding: $spacing-3;
      position: relative;
      text-align: left;
      vertical-align: top;

      &::before {
        background-color: transparent;
        border-left: $mid-grey solid 1px;
        content: "";
        display: block;
        height: calc(100% - (#{$spacing-3} * 2));
        left: 0;
        position: absolute;
        top: $spacing-3;
        width: 0;
      }

      // Custom widths based on items-X class name (number of items in list)
      &.items-3 {
        @include items(3, 0px);
      }

      &.items-5 {
        @include items(5, 0px);
      }

      &.items-6 {
        @include items(6, 0px);
      }
    }
  }

  .list-header {
    &.active {
      background-color: $mid-blue;
      outline: none;
      &::after {
        @include up-chevron-1($stone);
        box-sizing: initial;
      }
      &:before {
          @include great-red-trim;
        }
    }

    &:after {
      @include down-chevron-1($mid-blue);
      margin: 5px 0 0 10px;
    }
  }

  .Expander {
    background-color: $mid-blue;
    left: 0;
    top: 0;
    opacity: 1;
    position: absolute;
    transition: opacity 0.3s;
    width: 100%;
    z-index: 1;

    &.collapsed {
      opacity: 0;
      transition: none;
      z-index: -1;
    }
  }

  .ExpanderControl {
    cursor: pointer;
    transition: none;

    &.active {
      position: relative;
      transition: background-color 0.3s;
      &:after {
        border-color: $light-grey;
      }
    }
  }
}

#menu-activator {
  display: none;
}



// TABLET
@media screen and (max-width: 767px) {
  #menu {
    background-color: $mid-blue;
    float: none;
    height: auto;
    padding-top: 0;
    position: relative;
    top: 55px;
    transition: none;
    z-index: 1;

    a {
      @include heading-s-mob;
      border-bottom: $mid-grey solid 1px;
      color: $stone;
      cursor: default;
      display: block;
      margin: 0;
      outline: none;
      padding: $spacing-3;

      &:hover {
        background-color: transparent;

        &:before {
          display: none;
        }
      }
    }

    li {
      display: block;
      margin: 0;
      padding: 0;

    }

    .description {
      display: none;
    }

    .level-2 {
      background-color: transparent;
      display: block;

      a {
        color: $white;
        margin: 0 $spacing-3;
        padding: $spacing-3-m 0;
        height: auto;
      }

      li {
        display: block;
        min-height: 0;
        padding: 0;

        &::before {
          display: none;
        }

        &:last-child {
          border-bottom: $mid-grey solid 1px;
          a{
            border-bottom: none;
          }
        }

        &.items-3,
        &.items-5,
        &.items-6 {
          float: none;
          margin-left: 0;
          width: auto;
        }
      }
    }

    .list-header {
      &:after,
      &.active:after {
        display: none;
      }
    }

    .Expander {
      display: block;
      height: auto;
      position: static;

      &.collapsed {
        height: 0;
        overflow: hidden;
      }
    }

    .ExpanderControl {
      display: block;
      position: relative;

      &.active {
        border-bottom: none;
        padding-bottom: $spacing-4-m;
      }

      &::before,
      &.active:before {
        font-family: "Roboto", arial, helvetica, sans-serif;
        content: '+';
        font-size: 35px;
        font-weight: normal;
        height: 30px;
        width: 30px;
        left: initial;
        position: absolute;
        right: 30px;
        top: calc(100% / 3);
      }

      &.active:before {
        background-color: transparent;
        font-family: "Roboto", arial, helvetica, sans-serif;
        content: '_';
        font-size: 35px;
        font-weight: normal;
        top: 23%;
      }
    }

    &.collapsed {
      height: 0;
      overflow: hidden;
      transition: none;
    }
  }

  #menu-activator {
    @include body-s;
    font-weight: 600;
    width: 104px;
    height: 50px;
    text-align: left;
    background-color: transparent;
    border: 2px solid $white;
    border-radius: 0;
    color: $white;
    display: block;
    padding: 5px 10px 5px 10px;
    margin-right: 15px;
    position: absolute;
    transition: none;
    right: 0;
    top: -10px;

    &:focus {
      outline-color: $focus-yellow;
    }

    span {
      position: absolute;
      right: $spacing-4;
      top: 22px;

      &,
      &:after,
      &:before {
        background-color: $white;
        clear: right;
        content: "";
        float: right;
        height: 2px;
        margin: 0 0 8px 10px;
        width: 20px;
      }

      &:before {
        margin-top: -5px;
      }
    }

    &.active {
      background-color: $mid-blue;
      transition: background-color 0.1s;
    }
  }

}

